--- a/src/kanban/style.css
+++ b/src/kanban/style.css
@@ -116,3 +116,42 @@
 .footer__author {
     margin-right: 27px;
 }
+
+.footer__author span {
+    text-transform: uppercase;
+}
+
+/* MENU */
+
+.menu__list {
+    position: absolute;
+    right: 0;
+    width: 180px;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    color: #000000;
+
+    padding: 20px;
+    margin: 0;
+    list-style-type: none;
+    background-color: #EBECF0;
+
+    border-radius: 10px;
+}
+
+.menu__account, .menu__tasks, .menu__settings {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.menu__log-out {
+    cursor: pointer;
+}
+
+.menu__account:hover, .menu__tasks:hover, .menu__settings:hover, .menu__log-out:hover {
+    opacity: 0.6;
+}
+
