--- a/src/ex10_html-css-fundamentals-part2/task-03-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-03-1.css
@@ -6,50 +6,43 @@
     grid-template-rows: 1fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
     background-color: #fff;
     grid-gap: 1px;
-
     width: 600px;
     height: 500px;
-
     margin: 50px auto 0 auto;
 }
 
 .table__title {
     background-color: #d3e2f2;
-
     text-align: center;
     text-transform: uppercase;
-
     padding: 5px;
-
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 12px;
     color: rgb(128, 140, 154);
 }
 
-.table__rows {
+.table__cell {
     display: contents;
 }
 
 .table__row {
     background-color: #e3ebf2;
-        
     text-align: center;
     padding: 20px 10px;
-
     font-family: 'Roboro', sans-serif;
     font-size: 14px;
     color: rgb(128, 140, 154);
 }
 
-.table__rows div:first-child {
+.table__cell div:first-child {
     text-transform: capitalize;
 }
 
-.table__rows:nth-child(even) div {
+.table__cell:nth-child(even) div {
     background-color:rgb(209, 217, 227);
 }
 
-.table__rows:hover div {
+.table__cell:hover div {
     background-color:rgb(165, 199, 233);
 }
